# Will-I-Be-Fired--

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/: Agents.md  copilot-instructions.md
.github/workflows/: ci.yml  retrain-model.yml
.streamlit/: config.toml
configs/: README.md  policy.yaml
configs/experiments/: default.yaml  lightweight.yaml
docs/: BUSINESS_ACTIONS.md  DATA_CARD.md  FAIRNESS_AND_LIMITATIONS.md  STREAMLIT_DEPLOYMENT.md  non_programmer_guide.md
models/: best_model.joblib
reports/: metrics.json
src/: ablation.py  constants.py  fairness_analysis.py  feature_engineering.py  gui_app.py  inference.py  logging_utils.py  predict_cli.py  schemas.py  train_model.py
src/analysis/: __init__.py  failures.py
src/utils/: __init__.py  metrics.py  plotting.py  repro.py
src/will_i_be_fired.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_feature_engineering.py  test_gui_app.py  test_inference.py  test_predict_cli.py  test_schemas.py  test_streamlit_config.py  test_train_model_config.py  test_utils.py
